objects/AB4CD__ListView__c.object
<CustomObject>
    <fields>
        <fullName>AB4CD__Columns__c</fullName>
        <label>Columns</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB4CD__Email__c</fullName>
        <description>Email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AB4CD__Filters__c</fullName>
        <label>Filters</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AB4CD__Object__c</fullName>
        <description>Object</description>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__Ownership__c</fullName>
        <label>Ownership</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__Queue__c</fullName>
        <label>Queue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__Visibility__c</fullName>
        <description>Visibility</description>
        <label>Visibility</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB4CD__WhereClause__c</fullName>
        <description>Where Clause</description>
        <label>Where Clause</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <label>List View</label>
    <nameField>
        <label>ListView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>List Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>